Archive2/4f/a5dbb736b2dfbe/output
main.cpp:51:37: error: argument may not have 'void' type
        ResourceModel(T* data, Func f)
                                    ^
main.cpp:79:30: note: in instantiation of template class 'Wraiiper::ResourceModel<double, void>' requested here
      resource.push_back(new ResourceModel<T, void>(data)); 
                             ^
main.cpp:121:14: note: in instantiation of function template specialization 'Wraiiper::Wraiiper<double>' requested here
    Wraiiper wr2(new double);    // error !
             ^
1 error generated.
